--- a/app/frontend/scss/layout/_container.scss
+++ b/app/frontend/scss/layout/_container.scss
@@ -1,6 +1,6 @@
 .l-container {
   display: flex;
-  max-width: $global_page_width;
+  max-width: $global-page-width;
   margin: 0 auto;
   justify-content: space-between;
   padding: 1em 0;
