--- a/app/frontend/scss/object/component/_errors.scss
+++ b/app/frontend/scss/object/component/_errors.scss
@@ -1,12 +1,12 @@
 .c-errors {
-  background: lighten($danger_color, 30);
-  border: 2px solid $danger_color;
+  background: lighten($danger-color, 30);
+  border: 2px solid $danger-color;
   border-radius: 3px;
   text-align: left;
   padding: 1em;
 
   &__item {
-    color: $danger_color;
+    color: $danger-color;
 
     &:not(:last-child) {
       margin-bottom: .5em;
