--- a/app/frontend/scss/object/component/_text_area.scss
+++ b/app/frontend/scss/object/component/_text_area.scss
@@ -1,6 +1,6 @@
 .c-text-area {
   width: 100%;
-  border: 2px solid $general_line_color;
+  border: 2px solid $general-line-color;
   padding: .5em;
   outline: none;
 
