--- a/app/frontend/scss/object/project/contents/_article_contents.scss
+++ b/app/frontend/scss/object/project/contents/_article_contents.scss
@@ -20,7 +20,7 @@
 
     span {
       font-weight: 700;
-      color: $highlight_color;
+      color: $highlight-color;
     }
   }
 
@@ -28,7 +28,7 @@
 
     span {
       font-weight: 700;
-      color: $sub_highlight_color;
+      color: $sub-highlight-color;
     }
   }
 
