--- a/app/frontend/scss/selectize.scss
+++ b/app/frontend/scss/selectize.scss
@@ -1,7 +1,7 @@
 .selectize-input {
   .item {
-    background: $sub_highlight_color;
-    color: $white_color;
+    background: $sub-highlight-color;
+    color: $white-color;
     border-radius: 3px;
   }
 }
