--- a/app/frontend/scss/foundation/_reset.scss
+++ b/app/frontend/scss/foundation/_reset.scss
@@ -6,7 +6,7 @@ html {
 body {
   font-size: 1.6rem;
   line-height: 1.4;
-  background: $background_color;
+  background: $background-color;
 
   // mediaクエリ
 }
