--- a/app/frontend/scss/foundation/mixin/_border.scss
+++ b/app/frontend/scss/foundation/mixin/_border.scss
@@ -1,4 +1,4 @@
-@mixin hand-write-border($border-color: $black_color) {
+@mixin hand-write-border($border-color: $black-color) {
   border: 2px solid $border-color;
   border-radius: 3em 0.5em 2em 0.5em/0.4em 2em 0.5em 3em;
 }
