--- a/app/frontend/scss/foundation/mixin/_contents_box.scss
+++ b/app/frontend/scss/foundation/mixin/_contents_box.scss
@@ -1,15 +1,15 @@
 @mixin contents-box {
   position: relative;
   z-index: 0;
-  background: $white_color;
-  border: 1px solid $general_line_color;
+  background: $white-color;
+  border: 1px solid $general-line-color;
   border-radius: 3px;
   padding: 1em;
 }
 
 @mixin contents-header {
   text-align: center;
-  border-bottom: 1px solid $general_line_color;
+  border-bottom: 1px solid $general-line-color;
   margin-bottom: 1em;
   padding: 1em 0;
 
