--- a/app/frontend/scss/object/component/_badge.scss
+++ b/app/frontend/scss/object/component/_badge.scss
@@ -1,10 +1,10 @@
 .c-badge {
   @include block-badge;
-  background: $main_color;
-  color: $white_color;
+  background: $main-color;
+  color: $white-color;
 
   @each $key,
-  $color in $custom_colors {
+  $color in $custom-colors {
     &--#{$key} {
       @include badge-color-extension($color);
     }
@@ -12,7 +12,7 @@
 
   &--tag {
     position: relative;
-    background: $sub_highlight_color;
+    background: $sub-highlight-color;
     border-radius: 0px;
     padding-right: 0;
 
@@ -31,40 +31,40 @@
       left: 100%;
       border-top: 1em solid transparent;
       border-bottom: 1em solid transparent;
-      border-left: .5em solid $sub_highlight_color;
+      border-left: .5em solid $sub-highlight-color;
     }
 
     &:hover {
-      color: $white_color;
+      color: $white-color;
     }
   }
 
   &--favorite {
     background: transparent;
-    border: 2px solid $main_color;
+    border: 2px solid $main-color;
     border-radius: 10px;
-    color: $black_color;
+    color: $black-color;
 
     &::before {
       font-family: "Font Awesome 5 Free";
       font-weight: 900;
       content: "\f005";
-      color: $main_color;
+      color: $main-color;
       padding-right: .2em;
     }
   }
 
   &--comment {
     background: transparent;
-    border: 2px solid $primary_color;
+    border: 2px solid $primary-color;
     border-radius: 10px;
-    color: $black_color;
+    color: $black-color;
 
     &::before {
       font-family: "Font Awesome 5 Free";
       font-weight: 900;
       content: "\f4ad";
-      color: $primary_color;
+      color: $primary-color;
       padding-right: .2em;
     }
   }
