--- a/app/frontend/scss/object/project/_article_post_form.scss
+++ b/app/frontend/scss/object/project/_article_post_form.scss
@@ -11,8 +11,8 @@
   }
 
   &__content-wrapper {
-    background: $white_color;
-    border: 2px solid $general_line_color;
+    background: $white-color;
+    border: 2px solid $general-line-color;
     border-radius: 3px;
     margin-bottom: 1em;
     padding: 1em;
