--- a/app/frontend/scss/object/project/_header.scss
+++ b/app/frontend/scss/object/project/_header.scss
@@ -1,5 +1,5 @@
 .p-header {
-  max-width: $global_page_width;
+  max-width: $global-page-width;
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
@@ -21,7 +21,7 @@
     font-size: 2em;
     font-weight: 700;
     margin-right: 1em;
-    color: $white_color;
+    color: $white-color;
 
     &:hover {
       text-decoration: none;
@@ -58,7 +58,7 @@
     position: absolute;
     width: 180px;
     z-index: 1010;
-    border: 1px solid $general_line_color;
+    border: 1px solid $general-line-color;
     border-radius: 3px;
     background: white;
     right: 10px;
@@ -72,7 +72,7 @@
 
     &:not(:last-child) {
       margin-bottom: 1em;
-      border-bottom: 1px solid $general_line_color;
+      border-bottom: 1px solid $general-line-color;
     }
   }
 }
