--- a/app/frontend/scss/object/project/_tab_menu.scss
+++ b/app/frontend/scss/object/project/_tab_menu.scss
@@ -1,7 +1,7 @@
 .p-tab-menu {
-  border: 1px solid $general_line_color;
+  border: 1px solid $general-line-color;
   border-radius: 3px;
-  background: $white_color;
+  background: $white-color;
 
   &__menu {
     display: flex;
@@ -14,13 +14,13 @@
     text-align: center;
 
     &:hover {
-      background: $general_line_color;
-      border-bottom: 3px solid $main_color;
+      background: $general-line-color;
+      border-bottom: 3px solid $main-color;
     }
 
     &--linked {
-      background: $general_line_color;
-      border-bottom: 3px solid $main_color;
+      background: $general-line-color;
+      border-bottom: 3px solid $main-color;
     }
   }
 
