--- a/app/frontend/scss/object/project/_user_profile_mini.scss
+++ b/app/frontend/scss/object/project/_user_profile_mini.scss
@@ -1,7 +1,7 @@
 .p-user-profile-mini {
   display: flex;
   width: 270px;
-  border: 1px solid $general_line_color;
+  border: 1px solid $general-line-color;
   border-radius: 3px;
   padding: .5em;
 
