--- a/app/frontend/scss/object/project/contents/_account_activation_contents.scss
+++ b/app/frontend/scss/object/project/contents/_account_activation_contents.scss
@@ -27,9 +27,9 @@
 
   &__info {
     font-size: 1.4rem;
-    color: $supplement_color;
-    border: 2px solid $supplement_color;
-    background: lighten($supplement_color, 35);
+    color: $supplement-color;
+    border: 2px solid $supplement-color;
+    background: lighten($supplement-color, 35);
     padding: 1em;
   }
 
