--- a/app/frontend/scss/object/project/contents/_list_contents.scss
+++ b/app/frontend/scss/object/project/contents/_list_contents.scss
@@ -10,7 +10,7 @@
   }
 
   &__list-item {
-    border-bottom: 1px solid $general_line_color;
+    border-bottom: 1px solid $general-line-color;
 
     &:not(:last-child) {
       margin-bottom: 1em;
