--- a/app/frontend/scss/object/utility/_float.scss
+++ b/app/frontend/scss/object/utility/_float.scss
@@ -4,7 +4,6 @@
 
   &:hover {
     transform: translateY(-2px);
-    // box-shadow: 2px 2px 4px $float_shadow_color;
-    box-shadow: 0 0.5em 1em $float_shadow_color;
+    box-shadow: 0 0.5em 1em $float-shadow-color;
   }
 }
