--- a/app/views/articles/_favorite_users.html.slim
+++ b/app/views/articles/_favorite_users.html.slim
@@ -14,4 +14,4 @@
     - if sidebar
       = link_to 'すべて見る', favorite_article_path(article), class: 'c-link'
     - else
-      / = paginate users
+      = paginate users
