--- a/app/views/settings/account/index.html.slim
+++ b/app/views/settings/account/index.html.slim
@@ -12,7 +12,7 @@
         small.u-text-sub-highlight
           | 本登録が完了していません。本登録用メールから本登録を行ってください。
           br/
-          / TODO 再送用メール処理
+          // TODO 再送用メール処理
           | 本登録用メールを再送する場合は#{link_to 'こちらをクリックしてください', '#'}
     .p-form-contents__submit: button.c-hand-write-btn 変更する
   .p-form-contents__item
