--- a/app/views/shared/parts/_article_card.html.slim
+++ b/app/views/shared/parts/_article_card.html.slim
@@ -1,4 +1,4 @@
-.p-article-card.c-float
+.p-article-card.u-float
   = link_to article, class: 'p-article-card__body c-link'
     p.p-article-card__overview = article.overview
     p.p-article-card__title = article.title
