--- a/app/views/layouts/settings/base.html.slim
+++ b/app/views/layouts/settings/base.html.slim
@@ -8,12 +8,12 @@ html lang = 'ja'
         nav.p-list-contents.u-mr-3
           ul.p-list-contents_list
             = link_to settings_profile_index_path, class: 'c-link'
-              li.p-list-contents__list-item.u-p-2 プロフィール
+              li.p-list-contents__list-item.u-pv-2 プロフィール
             = link_to settings_account_index_path, class: 'c-link'
-              li.p-list-contents__list-item.u-p-2 アカウント
+              li.p-list-contents__list-item.u-pv-2 アカウント
             = link_to settings_password_index_path, class: 'c-link'
-              li.p-list-contents__list-item.u-p-2 パスワード
-      main.l-main.u-flex-size-3 = yield
+              li.p-list-contents__list-item.u-pv-2 パスワード
+      main.l-main.u-flex-size-4 = yield
     = render partial: 'shared/footer'
     - if Rails.env.development?
       = debug(params)
