update javascriptの変数の宣言をvar → letに変更

--- a/app/frontend/scss/object/component/_link.scss
+++ b/app/frontend/scss/object/component/_link.scss
@@ -20,4 +20,12 @@
       color: $white-color;
     }
   }
+
+  &--list {
+    color: $supplement-color;
+
+    &:hover {
+      color: $black-color;
+    }
+  }
 }
