--- a/app/frontend/scss/application.scss
+++ b/app/frontend/scss/application.scss
@@ -98,3 +98,4 @@ contents
 @import "./object/utility/shadow";
 @import "./object/utility/spacer";
 @import "./object/utility/text";
+@import "./object/utility/visibility";
