--- a/app/views/shared/_header.html.slim
+++ b/app/views/shared/_header.html.slim
@@ -12,7 +12,7 @@ header#header.l-header
             = link_to new_article_path, class: 'c-hand-write-btn c-hand-write-btn--dark-tone'
               i.fas.fa-pen.fa-fw
               | 投稿
-          li.p-header__list-item.js-tooltip data-tippy-content="まだ使えません！"
+          li.p-header__list-item.js-tooltip data-tippy-content='工事中...'
             = link_to '#', class: 'c-link c-link--nav'
               i.far.fa-bell.fa-lg
           - if visitor.temporary?
@@ -21,11 +21,23 @@ header#header.l-header
           li.p-header__list-item
             .p-header__dropdown.js-dropdown
               = user_photo visitor, size:35, class_name: 'c-user-photo'
-              ul.p-header__dropdown-list.u-shadow
-                li.p-header__dropdown-item = link_to 'マイページ', user_path(visitor), class: 'c-link c-link--list'
-                li.p-header__dropdown-item = link_to '設定', settings_root_path, class: 'c-link c-link--list'
-                li.p-header__dropdown-item = link_to '下書き一覧', drafts_path, class: 'c-link c-link--list'
-                li.p-header__dropdown-item = link_to 'ログアウト', logout_path, method: :delete, class: 'c-link c-link--list'
+              ul.p-header__dropdown-list.u-shadow.u-hide.js-dropdown-target
+                = link_to user_path(visitor), class: 'c-link c-link--list'
+                  li.p-header__dropdown-item
+                    i.fas.fa-user.fa-fw
+                    | マイページ
+                = link_to settings_root_path, class: 'c-link c-link--list'
+                  li.p-header__dropdown-item
+                    i.fas.fa-cog.fa-fw
+                    | 設定
+                = link_to drafts_path, class: 'c-link c-link--list'
+                  li.p-header__dropdown-item
+                    i.far.fa-file.fa-fw
+                    | 下書き一覧
+                = link_to logout_path, method: :delete, class: 'c-link c-link--list'
+                  li.p-header__dropdown-item
+                    i.fas.fa-sign-out-alt.fa-fw
+                    | ログアウト
         - else
           li.p-header__list-item = link_to '新規登録', signup_path, class: 'c-hand-write-btn c-hand-write-btn--sub-highlight'
           li.p-header__list-item = link_to 'ログイン', login_path, class: 'c-link c-link--nav'
