--- a/app/views/shared/_header.html.slim
+++ b/app/views/shared/_header.html.slim
@@ -2,7 +2,7 @@ header#header.l-header
   nav.p-header
     .p-header__left
       .p-header__logo = link_to 'Asobi', root_path, class: 'c-link c-link--brand'
-      = form_with url: searches_path, method: :get, local: true, class: 'p-header__search-form' do |f|
+      = form_with url: searches_articles_path, method: :get, local: true, class: 'p-header__search-form' do |f|
         .c-text-field.c-text-field--search
           = f.search_field :q, placeholder: 'キーワードを入力…', class: 'c-text-field__input'
     .p-header__right
