--- a/app/frontend/scss/application.scss
+++ b/app/frontend/scss/application.scss
@@ -93,6 +93,7 @@ contents
 ================================*/
 
 @import "./object/utility/disable";
+@import "./object/utility/flex_box";
 @import "./object/utility/flex_size";
 @import "./object/utility/float";
 @import "./object/utility/shadow";
