--- a/app/views/layouts/searches/base.html.slim
+++ b/app/views/layouts/searches/base.html.slim
@@ -5,15 +5,14 @@ html lang = 'ja'
     = render partial: 'shared/header'
     #container.l-container
       aside.l-sidebar--left.u-flex-size-1
-        nav.p-list-contents.u-mr-3
-          ul.p-list-contents_list
-            = link_to settings_profile_index_path, class: 'c-link c-link--list-nav'
-              li.p-list-contents__list-item.u-pv-2 プロフィール
-            = link_to settings_account_index_path, class: 'c-link c-link--list-nav'
-              li.p-list-contents__list-item.u-pv-2 アカウント
-            = link_to settings_password_index_path, class: 'c-link c-link--list-nav'
-              li.p-list-contents__list-item.u-pv-2 パスワード
-      main.l-main.u-flex-size-4 = yield
+        = render partial: 'searches/sidebar', locals: { q: @q, article_count: 120, user_count: 13, tag_count: 8}
+      main.l-main.u-flex-size-3
+        .p-list-contents
+          .p-list-contents__header
+            h1 = controller.controller_name
+          ul.p-list-contents__list
+            li.p-list-contents__list-item = yield
+          .p-list-contents__footer
     = render partial: 'shared/footer'
     - if Rails.env.development?
       = debug(params)
