--- a/app/frontend/scss/application.scss
+++ b/app/frontend/scss/application.scss
@@ -86,6 +86,7 @@ contents
 @import "./object/project/contents/list_contents";
 @import "./object/project/contents/user_profile_contents";
 @import "./object/project/contents/settings_profile_contents";
+@import "./object/project/contents/tag_list_contents";
 @import "./object/project/contents/tag_profile_contents";
 
 /*===============================
