--- a/app/views/searches/tags/index.html.slim
+++ b/app/views/searches/tags/index.html.slim
@@ -1,13 +1,12 @@
 = content_for(:title, "「#{@q}」の検索結果")
 
-p tags
-p = @q
-/ h3 検索結果 : #{@articles.total_count}件
-/ - if @articles.any?
-/   .row
-/     - @articles.each do |article|
-/       .col-md-4.col-sm-6.mb-4
-/         = render partial: 'shared/components/article_card', locals: { article: article }
-/   = paginate @articles
-/ - else
-/   p 「#{@q}」に一致する記事は見つかりませんでした。
+.p-tag-list-contents
+  .p-tag-list-contents__header
+    h1 「#{@q}」を含むタグの検索結果 : 不明件
+  ul.p-tag-list-contents__list
+    - if @result.any?
+      - @result.find_each do |tag|
+        li.p-tag-list-contents__item = link_to tag.name, tag, class: 'c-badge c-badge--tag'
+    - else
+      p 「#{@q}」を含むタグは見つかりませんでした。
+  .p-tag-list-contents_footer = paginate @result
