--- a/app/views/searches/articles/index.html.slim
+++ b/app/views/searches/articles/index.html.slim
@@ -1,13 +1,14 @@
 = content_for(:title, "「#{@q}」の検索結果")
 
-p articles
-p = @q
-/ h3 検索結果 : #{@articles.total_count}件
-/ - if @articles.any?
-/   .row
-/     - @articles.each do |article|
-/       .col-md-4.col-sm-6.mb-4
-/         = render partial: 'shared/components/article_card', locals: { article: article }
-/   = paginate @articles
-/ - else
-/   p 「#{@q}」に一致する記事は見つかりませんでした。
+.p-list-contents
+  .p-list-contents__header
+    h1 「#{@q}」を含むユーザーの検索結果 : #{@view_model.articles_count}件
+  - if @view_model.show_data.any?
+    ul.p-list-contents__list
+      - @view_model.show_data.each do |article|
+        li.p-list-contents__list-item
+          = render partial: 'shared/parts/article_list_item', locals: { article: article }
+  - else
+    p 「#{@q}」を含むユーザーは見つかりませんでした。
+  .p-list-contents__footer
+    = paginate @view_model.show_data
