--- a/app/views/account_activations/index.html.slim
+++ b/app/views/account_activations/index.html.slim
@@ -8,10 +8,9 @@
     h2.p-account-activation-contents__email = visitor.email
     p.p-account-activation-contents__text メール本文に記載されているURLをクリックして会員登録を完了しましょう！
     .p-account-activation-contents__info
-      // TODO メール再送リンクの処理
       .p-account-activation-contents__help
         p 24時間を過ぎた場合、最初から登録をやり直して頂く必要があります。
         p 詳しくは<a href="#" class="c-link">こちら</a>をご覧ください。
       .p-account-activation-contents__resend
         p.u-mb-1 メールが届いていない場合は、下のリンクからメールを再送できます。
-        = link_to 'メールを再送する', '#', class: 'c-link'
+        = link_to 'メールを再送する', resend_emails_path, method: :post, remote: true, class: 'c-link'
