--- a/app/views/shared/parts/_article_card.html.slim
+++ b/app/views/shared/parts/_article_card.html.slim
@@ -7,8 +7,8 @@
       - article.tags.each do |tag|
         li.p-article-card__tag-item: span.c-badge.c-badge--tag = tag.name
     .p-article-card__reaction
-      .p-article-card__favorite: span.c-badge.c-badge--favorite = article.favorites.count
-      .p-article-card__comment: span.c-badge.c-badge--comment = article.comments.count
+      .p-article-card__favorite: span.c-badge.c-badge--favorite = article.favorites_count
+      .p-article-card__comment: span.c-badge.c-badge--comment = article.comments_count
   = link_to article.user, class: 'p-article-card__footer c-link'
     .p-article-card__icon = user_photo article.user, size: 40, class_name: 'c-user-photo'
     .p-article-card__user-name = user_name_format article.user
