--- a/app/frontend/scss/application.scss
+++ b/app/frontend/scss/application.scss
@@ -81,6 +81,7 @@ contents
 ================================*/
 @import "./object/project/contents/account_activation_contents";
 @import "./object/project/contents/article_contents";
+@import "./object/project/contents/capsule_toy_contents";
 @import "./object/project/contents/card_contents";
 @import "./object/project/contents/form_contents";
 @import "./object/project/contents/list_contents";
