--- a/app/frontend/scss/object/component/_link.scss
+++ b/app/frontend/scss/object/component/_link.scss
@@ -29,4 +29,13 @@
       color: $main-color;
     }
   }
+
+  &--tag {
+    color: $white-color;
+
+    &:hover {
+      color: $white-color;
+      text-decoration: underline;
+    }
+  }
 }
