--- a/app/views/home/_capsule_toy.html.slim
+++ b/app/views/home/_capsule_toy.html.slim
@@ -7,5 +7,4 @@
       p 押してみてのお楽しみ!
     .p-capsule-toy-contents__btn
       button.c-hand-write-btn.c-hand-write-btn--highlight.c-hand-write-btn--wide
-        i.fas.fa-dice.fa-fw
-        | ガチャを引く
+        <i class="fas fa-dice fa-fw"></i>ガチャを引く
