--- a/app/views/home/_trend_articles.html.slim
+++ b/app/views/home/_trend_articles.html.slim
@@ -1,6 +1,6 @@
 .p-card-contents
   .p-card-contents__header
-    h1 おすすめの遊び
+    h1 <i class="fas fa-dice fa-fw"></i>おすすめの遊び
   ul.p-card-contents__list
     - articles.each do |article|
       li.p-card-contents__list-item
