--- a/app/views/searches/_sidebar.html.slim
+++ b/app/views/searches/_sidebar.html.slim
@@ -3,18 +3,15 @@ nav.p-list-contents.u-mr-3
     = link_to searches_articles_path(q: q), class: 'c-link c-link--list-nav'
       li.p-list-contents__list-item.u-flex-box.u-flex-box--fill.u-pv-2
         p
-          i.fas.fa-dice.fa-fw
-          | 遊び
+          <i class='fas fa-dice fa-fw'></i>遊び
         span.c-badge = articles_count
     = link_to searches_users_path(q: q), class: 'c-link c-link--list-nav'
       li.p-list-contents__list-item.u-flex-box.u-flex-box--fill.u-pv-2
         p
-          i.fas.fa-user.fa-fw
-          | ユーザー
+          <i class='fas fa-user fa-fw'></i>ユーザー
         span.c-badge = users_count
     = link_to searches_tags_path(q: q), class: 'c-link c-link--list-nav'
       li.p-list-contents__list-item.u-flex-box.u-flex-box--fill.u-pv-2
         p
-          i.fas.fa-tags.fa-fw
-          | タグ
+          <i class='fas fa-tags fa-fw'></i>タグ
         span.c-badge = tags_count
