--- a/app/views/articles/_contents.html.slim
+++ b/app/views/articles/_contents.html.slim
@@ -7,14 +7,12 @@
     - if visitor.myself? article.user
       .p-article-contents__menu
         = link_to edit_article_path(article), class: 'p-article-contents__menu-item c-link'
-          i.fas.fa-pen.fa-fw
-          | 編集する
+          <i class='fas fa-pen fa-fw'></i>編集する
         = link_to article_path, method: :delete, data: { confirm: "削除すると二度と元に戻せません。獲得したいいねも削除されます。\n削除してよろしいですか？" }, class: 'p-article-contents__menu-item c-link'
-          i.fas.fa-trash-alt.fa-fw
-          | 削除する
+          <i class='fas fa-trash-alt fa-fw'></i>削除する
   p.p-article-contents__overview = article.overview
   h1.p-article-contents__title = article.title
   ul.p-article-contents__tag-list
     - article.tags.each do |tag|
-      li.p-article-contents__tag = link_to tag.name, tag, class: 'c-badge c-badge--tag'
+      li.p-article-contents__tag = link_to tag.name, tag, class: 'c-badge c-badge--tag c-link c-link--tag'
   == article.content
