--- a/app/views/home/_trend_users.html.slim
+++ b/app/views/home/_trend_users.html.slim
@@ -1,6 +1,6 @@
 .p-card-contents.u-mb-3
   .p-card-contents__header
-    h2 おすすめのユーザー
+    h2 <i class="fas fa-user-alt fa-fw"></i>おすすめのユーザー
   ul.p-card-contents__list
     - users.each do |user|
       li.p-card-contents__list-item
