--- a/app/views/searches/tags/index.html.slim
+++ b/app/views/searches/tags/index.html.slim
@@ -6,7 +6,7 @@
   ul.p-tag-list-contents__list
     - if @view_model.show_data.any?
       - @view_model.show_data.find_each do |tag|
-        li.p-tag-list-contents__item = link_to tag.name, tag, class: 'c-badge c-badge--tag'
+        li.p-tag-list-contents__item = link_to tag.name, tag, class: 'c-badge c-badge--tag  c-link c-link--tag'
     - else
       li.p-tag-list-contents__item 「#{@q}」を含むタグは見つかりませんでした。
   .p-tag-list-contents_footer = paginate @view_model.show_data
