--- a/app/views/articles/_post_form.html.slim
+++ b/app/views/articles/_post_form.html.slim
@@ -1,3 +1,4 @@
+= render partial: 'shared/error_messages', locals: { model: article }
 = form_with model: article, local: true, class: 'p-article-post-form' do |f|
   - if article.id_digest.present?
     = f.hidden_field :id_digest, value: article.id_digest
