--- a/app/views/home/_capsule_toy.html.slim
+++ b/app/views/home/_capsule_toy.html.slim
@@ -6,5 +6,6 @@
       p どんな遊びが出てくるかは
       p 押してみてのお楽しみ!
     .p-capsule-toy-contents__btn
-      button.c-hand-write-btn.c-hand-write-btn--highlight.c-hand-write-btn--wide
-        <i class="fas fa-dice fa-fw"></i>ガチャを引く
+      = link_to capsule_toys_path
+        button.c-hand-write-btn.c-hand-write-btn--highlight.c-hand-write-btn--wide
+          <i class="fas fa-dice fa-fw"></i>ガチャを引く
