update トップページのN + 1問題の修正、各ページのデザインの修正
Asobiガチャの処理用にボタンのクラスにjs-capsule-toyを追加

--- a/app/frontend/scss/object/project/contents/_article_contents.scss
+++ b/app/frontend/scss/object/project/contents/_article_contents.scss
@@ -42,10 +42,12 @@
     margin-right: 1em;
   }
 
-  &__overview {}
+  &__overview {
+    margin-bottom: .5em;
+  }
 
   &__title {
-    font-size: 4.4rem;
+    font-size: 4rem;
     font-weight: 700;
     margin-bottom: 1.6rem;
   }
