--- a/app/views/home/_capsule_toy.html.slim
+++ b/app/views/home/_capsule_toy.html.slim
@@ -1,6 +1,6 @@
 .p-capsule-toy-contents.u-mb-3
   .p-capsule-toy-contents__header
-    h2 Asobiガチャ
+    h2 <i class="far fa-surprise fa-fw"></i>Asobiガチャ
   .p-capsule-toy-contents__body
     .p-capsule-toy-contents__caption
       p どんな遊びが出てくるかは
@@ -8,4 +8,4 @@
     .p-capsule-toy-contents__btn
       = link_to capsule_toys_path
         button.c-hand-write-btn.c-hand-write-btn--highlight.c-hand-write-btn--wide
-          <i class="fas fa-dice fa-fw"></i>ガチャを引く
+          <i class="fas fa-surprise fa-fw"></i>ガチャを引く
