--- a/app/views/articles/_sticky_menu.html.slim
+++ b/app/views/articles/_sticky_menu.html.slim
@@ -3,5 +3,5 @@ ul.p-sticky-menu
     circle-favorite-button :article-id=article.id :is-favorited="#{visitor.favorite?(article)}" :favoritable="#{visitor.register?}" :my-article="#{visitor.my_article?(article)}" :favorite-count=article.favorites_count
   li.p-sticky-menu__item
     .p-sticky-menu__btn
-      button.c-circle-btn.c-circle-btn--highlight
+      button.c-circle-btn.c-circle-btn--highlight.js-capsule-toy
         i.fas.fa-surprise.fa-fw
